Renamed Employee Razor Template  to Person
Added Logging

--- a/src/CodeGeneration/Templates/PersonRunTime.razor
+++ b/src/CodeGeneration/Templates/PersonRunTime.razor
@@ -1,6 +1,6 @@
 @inherits RazorEngineCore.RazorEngineTemplateBase<CodeGeneration.Models.PersonModel>;
 
-<h1>This is a Unit Test Email Razor Template</h1>
+<h1>Output of Person Razor Template</h1>
 <h2>User Details</h2>
 <h3>FullName: @UpperCaseNames(Model.FullName)</h3>
 <h3>Company: @Model.Company</h3>
