--- a/src/CodeGeneration/Templates/PersonCompileTime.tt
+++ b/src/CodeGeneration/Templates/PersonCompileTime.tt
@@ -21,3 +21,17 @@
 
     }
 #>
+
+<h5>Sample C# Generated Code</h5>
+
+<pre>
+  <code>
+    public class PersonModel
+    {
+        public string FullName { get; set;  }
+        public string EmailAddress { get; set;  }
+        public string[] Skills { get; set;  }
+        public string Company { get; set; }
+    }
+  </code>
+</pre>
